Adjust webpage colours to ensure sufficient contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ main {
 }
 
 .bg-body-tertiary { 
-    background-color: #209CEE !important;
+    background-color: #2E2EFF !important;
 }
 
 .navbar-brand {
@@ -73,7 +73,7 @@ button {
 
 #cover-text {
     /* Final rgba value sets the opacity so it is semi-transparent */
-    background-color: rgba(32, 156, 238, 0.7);
+    background-color: rgba(46, 46, 255, 0.7);
     font-size: 130%;
     position: absolute;
     top: 350px;
@@ -152,7 +152,7 @@ h3 {
 }
 
 .btn-primary {
-    background-color: #209CEE !important;
+    background-color: #2E2EFF !important;
 }
 
 /* Footer */
@@ -166,6 +166,6 @@ h3 {
 #social-networks i {
     font-size: 160%;
     padding: 5%;
-    color: #209CEE;
+    color: #2E2EFF;
 }
 
